--- a/index.html
+++ b/index.html
@@ -338,6 +338,22 @@
 							</div> <!-- end team member -->
 						</div> <!-- end col -->
 
+						<div class="col-md-4 wow fadeIn" data-wow-duration="2s" data-wow-delay="0.6s">
+							<div class="team-member mt-mdm-40">
+								<div class="team-img">
+									<img src="upload/team_3.png" alt="">
+									<div class="team-details text-center">
+										<h5 class="team-title mb-10">Rio Waller</h5>
+										<span>Organizer</span>
+										<div class="socials mt-20">
+											<a href="#"><i class="fa fa-google-plus"></i></a>
+											<a href="#"><i class="fa fa-envelope"></i></a>
+										</div>
+									</div>
+								</div>							
+							</div> <!-- end team member -->
+						</div> <!-- end col -->
+
 					</div> <!-- end row -->
 				</div> <!-- end container -->
 			</section> <!-- end our team -->
